--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -171,7 +171,14 @@
     }
   }
 
-  .resume-item-copy { margin: .75rem 0 0; }
+  .resume-item-copy { 
+    margin: .75rem 0 0; 
+
+    ul {
+      list-style: disc;
+      margin-left: 1.5rem;
+    }
+  }
 }
 
 // footer styles
